--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
@@ -29,6 +30,7 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "webpack": "^4.3.0",
-    "webpack-dev-middleware": "^3.1.0"
+    "webpack-dev-middleware": "^3.1.0",
+    "webpack-dev-server": "^3.1.1"
   }
 }
