--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bcrypt-nodejs": "^0.0.3",
     "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
@@ -25,6 +26,8 @@
     "graphql-tag": "^2.8.0",
     "html-webpack-plugin": "^3.1.0",
     "mongoose": "^5.0.12",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.2.0",
     "react-apollo": "^2.1.1",
     "react-dom": "^16.2.0",
