--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "eduardo-dangelo",
   "license": "ISC",
   "dependencies": {
+    "apollo-boost": "^0.1.4",
     "apollo-client": "^2.2.8",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
@@ -19,6 +20,7 @@
     "babel-preset-react": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
     "connect-mongo": "^2.0.1",
+    "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
@@ -26,12 +28,16 @@
     "graphql-tag": "^2.8.0",
     "html-webpack-plugin": "^3.1.0",
     "mongoose": "^5.0.12",
+    "node-sass": "^4.8.3",
+    "npm": "^5.8.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.2.0",
-    "react-apollo": "^2.1.1",
+    "react-apollo": "^2.1.2",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "webpack": "^4.3.0",
     "webpack-dev-middleware": "^3.1.0",
     "webpack-dev-server": "^3.1.1"
