--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "eduardo-dangelo",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.6.1",
     "apollo-boost": "^0.1.4",
     "apollo-client": "^2.2.8",
     "axios": "^0.18.0",
@@ -27,6 +28,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "html-webpack-plugin": "^3.1.0",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.12",
     "node-sass": "^4.8.3",
     "npm": "^5.8.0",
@@ -35,7 +37,10 @@
     "react": "^16.2.0",
     "react-apollo": "^2.1.2",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.3.0",
