--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
+    "file-loader": "^1.1.11",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "html-webpack-plugin": "^3.1.0",
@@ -44,6 +45,7 @@
     "redux-form": "^7.3.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
     "webpack": "^4.3.0",
     "webpack-dev-middleware": "^3.1.0",
     "webpack-dev-server": "^3.1.1"
