--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "connect-mongo": "^2.0.1",
     "css-loader": "^0.28.11",
+    "emotion": "^9.1.2",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
@@ -38,16 +39,22 @@
     "react": "^16.2.0",
     "react-apollo": "^2.1.2",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-spinners": "^0.3.2",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "uglify-es": "^3.3.9",
     "url-loader": "^1.0.1",
     "webpack": "^4.3.0",
     "webpack-dev-middleware": "^3.1.0",
     "webpack-dev-server": "^3.1.1"
+  },
+  "devDependencies": {
+    "react-svg-loader": "^2.1.0"
   }
 }
