--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^3.6.1",
     "apollo-boost": "^0.1.4",
     "apollo-client": "^2.2.8",
+    "apollo-upload-server": "^5.0.0",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
